Fix zoom and focus on ios

--- a/sass/includes/_modal.sass
+++ b/sass/includes/_modal.sass
@@ -269,6 +269,8 @@
         input
             width: 100%
             padding: 5px 10px
+            // avoid click zoom in iOS for small font-size
+            font-size: 16px
 
 
     &.content-typography
